# gh-issue-attachments

./: .gitignore  LICENSE  README.md  gh_attach.py  pyproject.toml  setup.sh  test.sh
.claude-plugin/: plugin.json
skills/lab-notebook/: SKILL.md
