[project]
name = "gh-issue-attachments"
version = "0.1.0"
description = "Upload images, videos, and files to GitHub issues via the undocumented user-attachments API"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
gh-attach = "gh_attach:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["gh_attach.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
